--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,8 +22,9 @@ jobs:
         id: tag
         run: echo "time=$(date +%Y%m%d%H%M%S%9N)" >> $GITHUB_OUTPUT
 
-      - name: Convert User Name to Lower Case
-        run: echo "::set-output name=lower_repo::$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')"
+      - name: Convert Repository Name to Lower Case
+        id: lower_repo_name
+        run: echo "repo=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -36,7 +37,7 @@ jobs:
           push: true
           context: .
           file: release/prod.Dockerfile
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.REGISTRY }}/${{ steps.lower_repo_name.outputs.repo }}/${{ env.IMAGE_NAME }}:latest
 
       - name: Update compose timestamp
         run: sed -i '1 s/#timestamp/#timestamp:${{ steps.tag.outputs.time }}/g' release/compose.yaml
